--- a/public/index.html
+++ b/public/index.html
@@ -1,163 +1,156 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=7.5, user-scalable=yes">
-    <title>Holograms</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" defer></script>
-    <script src="https://threejs.org/examples/js/loaders/FontLoader.js" defer></script>
-    <script src="https://threejs.org/examples/js/geometries/TextGeometry.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.9.0/dist/tf.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose@0.0.7/dist/handpose.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/renderers/CSS2DRenderer.js" defer></script>
-    <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
-    <script src="script.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=7.5, user-scalable=yes">
+  <title>Holograms</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Three.js -->
+  <script src="public/js/three.min.js" defer></script>
+  <script src="public/js/FontLoader.js" defer></script>
+  <script src="public/js/TextGeometry.js" defer></script>
+  <script src="public/js/CSS2DRenderer.js" defer></script>
+
+  <!-- Other libraries (CDN) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.9.0/dist/tf.min.js" defer></script>
+  <script src="https://cdn.socket.io/4.7.4/socket.io.min.js" defer></script>
+
+  <!-- Handpose model -->
+  <script src="public/js/handpose.js" type="module" defer></script>
+
+  <script async src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="script.js" type="module" defer></script>
 </head>
 <body>
-    <video id="camera-view" autoplay playsinline style="display: none;"></video>
-    <div class="title-container">
-        <div id="title">HOLOGRAM</div>
+  <video id="camera-view" autoplay playsinline></video>
+  <div id="grid-container"></div>
+  <div id="scanOverlay" style="display:none;"></div>
+  <div class="button-container">
+    <button id="fileButton" aria-label="Upload Audio File">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M12 5v14m-7-7h14" stroke="var(--color-primary)" fill="none" stroke-linecap="round"/>
+      </svg>
+    </button>
+    <button id="playPauseButton" aria-label="Play/Pause" disabled>
+      <svg id="playIcon" class="icon-visible" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M8 5v14l11-7z" fill="var(--color-primary)"/>
+      </svg>
+      <svg id="pauseIcon" class="icon-hidden" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M6 4h4v16H6V4zm8 0h4v16h-4V4z" fill="var(--color-primary)"/>
+      </svg>
+    </button>
+    <button id="micButton" aria-label="Microphone">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="60%" height="60%">
+        <path d="M12 15a4 4 0 0 0 4-4V5a4 4 0 0 0-8 0v6a4 4 0 0 0 4 4z" 
+              fill="none" 
+              stroke="currentColor" 
+              stroke-width="2"
+              stroke-linecap="round"/>
+        <path d="M5 10v1a7 7 0 0 0 7 7 7 7 0 0 0 7-7v-1"
+              fill="none" 
+              stroke="currentColor" 
+              stroke-width="2"
+              stroke-linecap="round"/>
+        <line x1="12" y1="19" x2="12" y2="23" 
+              stroke="currentColor" 
+              stroke-width="2"
+              stroke-linecap="round"/>
+        <line x1="8" y1="23" x2="16" y2="23" 
+              stroke="currentColor" 
+              stroke-width="2"
+              stroke-linecap="round"/>
+      </svg>
+    </button>
+    <button id="fullscreenButton" aria-label="Fullscreen">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <polyline points="4,10 4,4 10,4" stroke="white" fill="none" stroke-linecap="round"/>
+        <polyline points="14,4 20,4 20,10" stroke="white" fill="none" stroke-linecap="round"/>
+        <polyline points="20,14 20,20 14,20" stroke="white" fill="none" stroke-linecap="round"/>
+        <polyline points="10,20 4,20 4,14" stroke="white" fill="none" stroke-linecap="round"/>
+      </svg>
+    </button>
+    <button id="xrButton" aria-label="Extended Reality">XR</button>
+    <button id="gestureRecordButton" aria-label="Gestures">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" width="60%" height="60%">
+        <path d="M12 40 Q16 36, 22 36 Q28 34, 34 36 Q40 38, 46 42 Q50 46, 48 52 Q44 56, 36 56 L18 56 Q14 52, 12 48" stroke="white" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M12 40 L8 32" stroke="white" fill="none" stroke-width="2" stroke-linecap="round"/>
+        <path d="M18 40 L18 20" stroke="white" fill="none" stroke-width="2" stroke-linecap="round"/>
+        <path d="M26 40 L26 16" stroke="white" fill="none" stroke-width="2" stroke-linecap="round"/>
+        <path d="M34 40 L34 18" stroke="white" fill="none" stroke-width="2" stroke-linecap="round"/>
+        <path d="M42 40 L42 24" stroke="white" fill="none" stroke-width="2" stroke-linecap="round"/>
+      </svg>
+    </button>
+    <button id="scanButton" aria-label="Scan">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="
+          M3 3h7v7H3z
+          M3 14h7v7H3z
+          M14 3h7v7h-7z
+          M5 5h3v3H5z
+          M5 16h3v3H5z
+          M16 5h3v3h-3z
+          M8 8h3v2H8z
+          M8 13h2v3H8z
+          M13 8h3v2h-3z
+          M18 14h3v6h-6v-3h3z
+          M11 11h2v2h-2z
+          M11 16h2v2h-2z
+          M16 11h2v2h-2z
+        " stroke="var(--color-scan)"
+             fill="none"
+             stroke-linecap="round"
+             stroke-linejoin="round"
+             stroke-width="1.2"/>
+      </svg>
+    </button>
+    <button id="promptButton" aria-label="Prompt">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M4 4h16v16H4z" fill="none" stroke="white" stroke-width="2"/>
+        <path d="M7 8h10M7 11h10M7 14h10" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
+        <path d="M19 3v4h-4" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round">
+          <animate attributeName="opacity" values="1;0.5;1" dur="2s" repeatCount="indefinite"/>
+        </path>
+      </svg>
+    </button>
+    <button id="bluetoothButton" aria-label="Bluetooth">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M17.71 7.71L12 2h-1v7.59L6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 11 14.41V22h1l5.71-5.71-4.3-4.29 4.3-4.29z" fill="white"/>
+      </svg>
+    </button>
+  </div>
+  <button id="toggleCameraButton" aria-label="Switch Camera" style="display: none;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--color-primary)">
+      <path d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6h-2c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8h-2z"/>
+    </svg>
+  </button>
+  <input type="file" id="fileInput" accept="audio/*" style="display: none;">
+  <div id="timeline-container">
+    <canvas id="timeline-canvas"></canvas>
+    <div id="playhead"></div>
+  </div>
+  <div id="gestureModal" class="gesture-modal">
+    <div class="gesture-modal-content">
+      <span class="close-button" id="closeGestureModal">×</span>
+      <h2>Gesture Recording</h2>
+      <p id="gestureStatus">Press "Start Recording" to begin.</p>
+      <button id="startRecordingButton">Start Recording</button>
+      <button id="stopRecordingButton" disabled>Stop Recording</button>
+      <div id="gestureVisualization" style="margin-top:20px;">
+        <canvas id="gestureCanvas" width="500" height="300" style="background-color:#333;"></canvas>
+      </div>
     </div>
-    <div id="grid-container"></div>
-    <div id="scanOverlay"></div>
-    <div class="button-container">
-        <button id="fileButton" aria-label="Upload Audio File">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--color-primary)" width="60%" height="60%">
-                <path d="M12 5v14m-7-7h14" stroke="currentColor" stroke-width="2" />
-            </svg>
-        </button>
-        <button id="playPauseButton" aria-label="Play/Pause" disabled>
-            <svg id="playIcon" class="icon-visible" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--color-primary)" width="60%" height="60%">
-                <path d="M8 5v14l11-7z" />
-            </svg>
-            <svg id="pauseIcon" class="icon-hidden" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--color-primary)" width="60%" height="60%">
-                <path d="M6 4h4v16H6V4zm8 0h4v16h-4V4z" />
-            </svg>
-        </button>
-        <button id="micButton" aria-label="Microphone">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--color-primary)" width="60%" height="60%">
-                <path d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3z" />
-                <path d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z" />
-            </svg>
-        </button>
-        <button id="fullscreenButton" aria-label="Fullscreen">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--color-primary)" width="60%" height="60%">
-                <path d="M3 3h6v2H5v4H3V3z" />
-                <path d="M3 21h6v-2H5v-4H3v6z" />
-                <path d="M21 3h-6v2h4v4h2V3z" />
-                <path d="M21 21h-6v-2h4v-4h2v6z" />
-            </svg>
-        </button>
-        <button id="xrButton" aria-label="Extended Reality">
-            <svg id="xrLabel" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--color-primary)" width="60%" height="60%">
-                <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="18" fill="var(--color-primary)" dy=".3em">XR</text>
-            </svg>
-            <svg id="xrArrows" class="xr-arrows" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#FFFFFF" stroke-width="2" style="display:none;">
-                <path d="M10.0476 3.77423C12.8883 2.42628 15.9555 3.15748 18.334 5.34987" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M5.66602 18.6501C8.04458 20.8425 11.1117 21.5737 13.9524 20.2257" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M19.9438 15.9688C21.2918 13.1281 20.5606 10.0609 18.3682 7.68232" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M4.05615 8.03125C2.7082 10.872 3.4394 13.9391 5.63179 16.3177" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-            <svg id="xrArrow1" class="xr-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#FFFFFF" stroke-width="2" style="display:none;">
-                <path d="M4 12a8 8 0 018-8"></path>
-                <path d="M12 4v8h-4"></path>
-            </svg>
-            <svg id="xrArrow2" class="xr-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#FFFFFF" stroke-width="2" style="display:none;">
-                <path d="M20 12a8 8 0 01-8 8"></path>
-                <path d="M12 20v-8h4"></path>
-            </svg>
-        </button>
-        <button id="gestureRecordButton" aria-label="Record Gesture">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--color-primary)" width="60%" height="60%">
-                <circle cx="10" cy="10" r="7" stroke="currentColor" stroke-width="2" fill="none" />
-                <line x1="15" y1="15" x2="20" y2="20" stroke="currentColor" stroke-width="2" />
-            </svg>
-        </button>
-        <button id="scanButton" aria-label="Scan">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="60%" height="60%">
-                <path d="M6,6 h3 M15,6 h3 M6,18 h3 M15,18 h3 M6,6 v3 M6,15 v3 M18,6 v3 M18,15 v3" 
-                      stroke="var(--color-scan)" 
-                      stroke-width="2"
-                      fill="none"/>
-                <rect x="8" y="8" width="8" height="8" rx="1" ry="1" fill="var(--color-scan)"/>
-            </svg>
-        </button>
-        <button id="promptButton" aria-label="Предложить промпт">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--color-primary)" width="60%" height="60%">
-                <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="18" fill="var(--color-primary)" dy=".3em">?</text>
-            </svg>
-        </button>    
-        </div>
-    <input type="file" id="fileInput" accept="audio/*" style="display: none;">
-    <div id="timeline-container">
-        <canvas id="timeline-canvas"></canvas>
-        <div id="playhead"></div>
+  </div>
+  <div id="promptModal" class="modal">
+    <div class="modal-content">
+      <span class="close-button" id="closePromptModal">×</span>
+      <h2>Предложить промпт</h2>
+      <textarea id="promptText" placeholder="Опишите ваш промпт"></textarea>
+      <button id="submitPrompt">Отправить</button>
     </div>
-    <div id="gestureModal" class="gesture-modal">
-        <div class="gesture-modal-content">
-            <span class="close-button" id="closeGestureModal">×</span>
-            <h2>Gesture Recording</h2>
-            <p id="gestureStatus">Press "Start Recording" to begin.</p>
-            <button id="startRecordingButton">Start Recording</button>
-            <button id="stopRecordingButton" disabled>Stop Recording</button>
-            <div id="gestureVisualization" style="margin-top:20px;">
-                <canvas id="gestureCanvas" width="500" height="300" style="background-color:#333;"></canvas>
-            </div>
-        </div>
-    </div>
-    <div id="promptModal" class="modal">
-        <div class="modal-content">
-            <span class="close-button" id="closePromptModal">×</span>
-            <h2>Предложить промпт</h2>
-            <textarea id="promptText" placeholder="Опишите ваш промпт"></textarea>
-            <button id="submitPrompt">Отправить</button>
-        </div>
-    </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const socket = io('http://localhost:3000');
-
-            socket.on('connect', () => {
-                console.log('Connected to server via Socket.IO');
-            });
-
-            const initData = Telegram.WebApp.initDataUnsafe;
-            const userId = initData.user ? initData.user.id : null;
-
-            if (userId) {
-                socket.emit('authenticate', { initData: Telegram.WebApp.initData });
-                socket.emit('join-room', { roomId: userId, userId: userId });
-            } else {
-                console.log('Telegram user data not available');
-            }
-
-            socket.on('auth-success', (data) => {
-                console.log('Authentication successful, user ID:', data.userId);
-            });
-
-            socket.on('auth-failed', () => {
-                console.log('Authentication failed');
-            });
-
-            socket.on('user-joined', (data) => {
-                console.log('New user joined:', data.userId, 'Socket ID:', data.socketId);
-            });
-
-            socket.on('connect_error', (err) => {
-                console.log('Connection Error:', err);
-            });
-
-            socket.on('reconnect_error', (err) => {
-                console.log('Reconnection Error:', err);
-            });
-
-            socket.on('disconnect', (reason) => {
-                console.log('Disconnected:', reason);
-            });
-        });
-    </script>
-
+  </div>
 </body>
 </html>
